--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^1.0.12",
+    "@web3-name-sdk/register": "^0.0.1-beta.1",
+    "@wormhole-foundation/wormhole-connect": "^0.1.1",
+    "ethers": "5.7.2",
+    "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.4"
+    "viem": "^1.15.3",
+    "wagmi": "^1.4.3"
   },
   "devDependencies": {
     "typescript": "^5",
