--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
     "react": "^18",
     "react-dom": "^18",
     "viem": "^1.15.3",
-    "wagmi": "^1.4.3"
+    "wagmi": "^1.4.3",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.4",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.4"
+    "typescript": "^5"
   }
 }
